--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,11 @@ layout: page
 title: Blog
 permalink: /blog/
 ---
+
 <div class="colorlib-blog">
     <div class="container">
         <div class="row">
-            {% for post in site.posts %}
+            {% for post in site.categories.blog %}
             {% assign mod3 = forloop.index | modulo: 3 %}
             <div class="col-md-4 animate-box">
                 <article class="article-entry">
