--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ excerpt: This is the greatest website on earth. Share! Like! Subscribe! I'm dead
 <div class="colorlib-blog colorlib-light-grey">
   <div class="container">
       <div class="row">
-          {% for post in site.posts limit:3 %}
+          {% for post in site.categories.blog limit:3 %}
           <div class="col-md-4 animate-box">
               <article class="article-entry">
                   <a href="{{ post.url }}" class="blog-img" style="background-image: url(/images/{{ post.image }});">
