--- a/contact.html
+++ b/contact.html
@@ -11,18 +11,31 @@ permalink: /contact/
                 <h2>Contact Information</h2>
                 <div class="row">
                     <div class="col-md-12">
+                        <ul>
+                            <li><span><i class="icon-location-2"></i></span> {{ site.street1 }}, {{ site.city }}, {{
+                                site.state }} {{ site.zipcode }}</li>
+                            <li><span><i class="icon-phone3"></i></span> <a href="tel://{{ site.phone}}">+ {{
+                                    site.phone }}</a></li>
+                            <li><span><i class="icon-paperplane"></i></span> <a href="mailto:{{ site.email }}">{{
+                                    site.email }}</a></li>
+                            <li><span><i class="icon-globe"></i></span> <a href="{{ site.url }}">{{ site.url }}</a></li>
+                        </ul>
                         <div class="contact-info-wrap-flex">
                             <div class="con-info">
-                                <p><span><i class="icon-location-2"></i></span> {{ site.street1 }} <br> {{ site.city }} {{ site.state }} {{ site.zipcode }}</p>
+                                <p><span><i class="icon-location-2"></i></span> {{ site.street1 }} <br> {{ site.city }}
+                                    {{ site.state }} {{ site.zipcode }}</p>
                             </div>
                             <div class="con-info">
-                                <p><span><i class="icon-phone3"></i></span> <a href="tel://{{ site.phone}}">+ {{ site.phone }}</a></p>
+                                <p><span><i class="icon-phone3"></i></span> <a href="tel://{{ site.phone}}">+ {{
+                                        site.phone }}</a></p>
                             </div>
                             <div class="con-info">
-                                <p><span><i class="icon-paperplane"></i></span> <a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+                                <p><span><i class="icon-paperplane"></i></span> <a href="mailto:{{ site.email }}">{{
+                                        site.email }}</a></p>
                             </div>
                             <div class="con-info">
-                                <p><span><i class="icon-globe"></i></span> <a href="{{ site.url }}">{{ site.url }}</a></p>
+                                <p><span><i class="icon-globe"></i></span> <a href="{{ site.url }}">{{ site.url }}</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -30,42 +43,66 @@ permalink: /contact/
             </div>
             <div class="col-md-10 col-md-offset-1 animate-box">
                 <h2>Get In Touch</h2>
-                <form action="#">
-                    <div class="row form-group">
-                        <div class="col-md-6">
-                            <!-- <label for="fname">First Name</label> -->
-                            <input type="text" id="fname" class="form-control" placeholder="Your firstname">
-                        </div>
-                        <div class="col-md-6">
-                            <!-- <label for="lname">Last Name</label> -->
-                            <input type="text" id="lname" class="form-control" placeholder="Your lastname">
-                        </div>
-                    </div>
-
+                <form id="contact-us">
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <!-- <label for="email">Email</label> -->
-                            <input type="text" id="email" class="form-control" placeholder="Your email address">
+                            <label class="sr-only" for="value1">Name</label>
+                            <input type="text" name="value1" class="form-control" placeholder="Your name">
                         </div>
                     </div>
-
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <!-- <label for="subject">Subject</label> -->
-                            <input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+                            <label class="sr-only" for="value2">Email</label>
+                            <input type="text" name="value2" class="form-control" placeholder="Your email address">
                         </div>
                     </div>
-
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <!-- <label for="message">Message</label> -->
-                            <textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+                            <label class="sr-only" for="value3">Message</label>
+                            <textarea name="value3" cols="30" rows="10" class="form-control"
+                                placeholder="Say something about us"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Send Message" class="btn btn-primary">
                     </div>
+                    <div id="messages" class="alert alert-success hide" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                        <span id="result">Message sent!</span>
+                    </div>
                 </form>
+                <script>
+                    window.addEventListener("load", function () {
+                        function sendData() {
+                            var XHR = new XMLHttpRequest();
+
+                            var FD = new FormData(form);
+
+                            XHR.addEventListener("load", function (event) {
+                                $('#messages').addClass('show');
+                            });
+
+                            XHR.addEventListener("error", function (event) {
+                                $('#messages').addClass('show');
+                            });
+
+                            XHR.open("POST",
+                                "https://maker.ifttt.com/trigger/contact_resultsnow/with/key/czK6TzHRYCPhTdiXzioxb7"
+                            );
+
+                            XHR.send(FD);
+                        }
+
+                        var form = document.getElementById("contact-us");
+
+                        form.addEventListener("submit", function (event) {
+                            event.preventDefault();
+
+                            sendData();
+                        });
+                    });
+                </script>
             </div>
         </div>
     </div>
