update about us

--- a/about.html
+++ b/about.html
@@ -8,22 +8,36 @@ permalink: /about/
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 row-pb-md animate-box">
-                <div class="video colorlib-video" style="background-image: url('{{ realtive_url }}/images/img_bg_1.jpg');">
-                    <a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-play3"></i></a>
-                    <div class="overlay"></div>
-                </div>
+                <iframe
+                    src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FResultsNowLLC%2Fvideos%2F279598826039289%2F&show_text=0&width=560"
+                    width="750" height="422" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowTransparency="true" allowFullScreen="true" class="video colorlib-video"></iframe>
             </div>
             <div class="col-md-10 col-md-offset-1 text-center animate-box">
                 <div class="about-wrap">
                     <div class="heading-2">
-                        <h2>{{ site.title }} the leading fitness site</h2>
+                        <h2>Join our Fit Family and<br>Let Us Help You Achieve Your Fitness Goals!</h2>
                     </div>
-                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                        unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
-                        decided to leave for the far World of Grammar.</p>
-                    <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild
-                        Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her
-                        seven versalia, put her initial into the belt and made herself on the way.</p>
+                    <div class="heading-3">
+                        <h3>Weight Loss, Core Stability, Strength, Cardio</h3>
+                    </div>
+                    <div
+                        style="background-image: url(/images/brand2.png); background-size: contain; background-repeat: no-repeat; height: 300px; background-position-x: center;">
+                        &nbsp;</div>
+                    <p class="h1"><a href="tel://{{ site.phone}}">+{{ site.phone }}</a></p>
+                    <p class="h2">First Personal Training Session Free</p>
+                    <p class="h2">First Group Fitness Class Free</p>
+                    <p><strong>Vision Statement</strong> To provide members/clients with a proper workout which will
+                        help their bodies
+                        to change so they can reach their fitness goals, as well as educate them so they can achieve
+                        their long-term goals without injury. </p>
+                    <p><strong>Mission Statement</strong> To help members/clients achieve their fitness goals long term
+                        by
+                        transitioning from personal training to group fitness and referring clients. Group classes are
+                        set up to achieve everything the body needs to change and reach one’s goals. If members cannot
+                        come at one particular time slot throughout the week, they can use the color coordinated
+                        schedule to help them achieve their goals. </p>
+                    <p class="h3">No Yearly Fees or Cancellation Fees</p>
                 </div>
             </div>
         </div>
