--- a/testimonials.html
+++ b/testimonials.html
@@ -2,4 +2,11 @@
 layout: page
 title: Testimonials
 permalink: /testimonials/
+css: testimonials.css
 ---
+
+<div id="colorlib-testimony">
+    <div class="container">
+        {% include testimonials-include.html %}
+    </div>
+</div>
