--- a/index.html
+++ b/index.html
@@ -9,45 +9,21 @@ fulltitle: "Results Now | Welcome!"
 <aside id="colorlib-hero">
   <div class="flexslider">
     <ul class="slides">
-      <li style="background-image: url(images/img_bg_2.jpg);">
+      {% for slide in site.data.slides %}
+      <li style="background-image: url(/images/{{ slide.image }});">
         <div class="overlay"></div>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
               <div class="slider-text-inner text-center">
-                <h1> This is a Lifestyle There is no Finish Line</h1>
-                <p><a href="#" class="btn btn-primary btn-lg btn-learn">Join Classes</a></p>
+                <h1>{{ intro.text }}</h1>
+                <p><a href="/classes" class="btn btn-primary btn-lg btn-learn">Join Classes</a></p>
               </div>
             </div>
           </div>
         </div>
       </li>
-      <li style="background-image: url(images/img_bg_3.jpg);">
-        <div class="overlay"></div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
-              <div class="slider-text-inner text-center">
-                <h1>Stop Wishing, Start Doing</h1>
-                <p><a href="#" class="btn btn-primary btn-lg btn-learn">Join Classes</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li style="background-image: url(images/img_bg_4.jpg);">
-        <div class="overlay"></div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-8 col-sm-12 col-md-offset-2 slider-text">
-              <div class="slider-text-inner text-center">
-                <h1>Working Out is a Reward not a Punishment</h1>
-                <p><a href="#" class="btn btn-primary btn-lg btn-learn">Join Classes</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
+      {% endfor %}
     </ul>
   </div>
 </aside>
@@ -57,27 +33,15 @@ fulltitle: "Results Now | Welcome!"
     <div class="row">
       <div class="col-md-12 intro-wrap animate-box">
         <div class="intro-flex">
-          <div class="one-third intro-img" style="background-image: url(images/intro-img-1.jpg)">
+          {% for intro in site.data.intros %}
+          <div class="one-third intro-img" style="background-image: url(/images/{{ intro.image }})">
             <div class="desc">
-              <h3>Body Building</h3>
-              <p>Which roasted parts of sentences fly into your mouth.</p>
-              <span class="price text-center">$25.00<br><small>/month</small></span>
+              <h3>{{ intro.focus }}</h3>
+              <p>{{ intro.description }}</p>
+              <span class="price text-center">{{ intro.price }}<br><small>/{{ intro.price-interval }}</small></span>
             </div>
           </div>
-          <div class="one-third intro-img" style="background-image: url(images/intro-img-2.jpg)">
-            <div class="desc">
-              <h3>Yoga Program</h3>
-              <p>Which roasted parts of sentences fly into your mouth.</p>
-              <span class="price text-center">$25.00<br><small>/month</small></span>
-            </div>
-          </div>
-          <div class="one-third intro-img" style="background-image: url(images/intro-img-3.jpg)">
-            <div class="desc">
-              <h3>Aerobics Classes</h3>
-              <p>Which roasted parts of sentences fly into your mouth.</p>
-              <span class="price text-center">$25.00<br><small>/month</small></span>
-            </div>
-          </div>
+          {% endfor %}
         </div>
       </div>
     </div>
@@ -87,57 +51,19 @@ fulltitle: "Results Now | Welcome!"
 <div id="colorlib-services">
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-        <h2>Being fit is attractive</h2>
-        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
-          day however a small line of blind text by the name</p>
-      </div>
-    </div>
-    <div class="row">
+      {% for service in site.data.services %}
       <div class="col-md-3 text-center animate-box">
         <div class="services">
           <span class="icon">
-            <i class="flaticon-gym"></i>
+            <i class="flaticon-{{ service.icon }}"></i>
           </span>
           <div class="desc">
-            <h3>Cardio Program</h3>
-            <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+            <h3>{{ service.title }}</h3>
+            <p>{{ service.description }}</p>
           </div>
         </div>
       </div>
-      <div class="col-md-3 text-center animate-box">
-        <div class="services">
-          <span class="icon">
-            <i class="flaticon-weightlifting"></i>
-          </span>
-          <div class="desc">
-            <h3>Body Building</h3>
-            <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 text-center animate-box">
-        <div class="services">
-          <span class="icon">
-            <i class="flaticon-martial-arts"></i>
-          </span>
-          <div class="desc">
-            <h3>Karate Classes</h3>
-            <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 text-center animate-box">
-        <div class="services">
-          <span class="icon">
-            <i class="flaticon-gloves"></i>
-          </span>
-          <div class="desc">
-            <h3>Boxing Program</h3>
-            <p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </div>
@@ -183,22 +109,22 @@ fulltitle: "Results Now | Welcome!"
 
 <div class="colorlib-blog colorlib-light-grey">
   <div class="container">
-      <div class="row">
-          {% for post in site.categories.blog limit:3 %}
-          <div class="col-md-4 animate-box">
-              <article class="article-entry">
-                  <a href="{{ post.url }}" class="blog-img" style="background-image: url(/images/{{ post.image }});">
-                      <p class="meta"><span class="day">{{ post.date | date: "%d" }}</span><span class="month">{{
+    <div class="row">
+      {% for post in site.categories.blog limit:3 %}
+      <div class="col-md-4 animate-box">
+        <article class="article-entry">
+          <a href="{{ post.url }}" class="blog-img" style="background-image: url(/images/{{ post.image }});">
+            <p class="meta"><span class="day">{{ post.date | date: "%d" }}</span><span class="month">{{
                               post.date | date: "%b" }}</span></p>
-                  </a>
-                  <div class="desc">
-                      <p class="admin"><span>Posted by:</span> <span>{{ post.author }}</span></p>
-                      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                      {{ post.excerpt }}
-                  </div>
-              </article>
+          </a>
+          <div class="desc">
+            <p class="admin"><span>Posted by:</span> <span>{{ post.author }}</span></p>
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            {{ post.excerpt }}
           </div>
-          {% endfor %}
+        </article>
       </div>
+      {% endfor %}
+    </div>
   </div>
 </div>
