change link text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ fulltitle: "Results Now | Welcome!"
         <div class="desc">
           <h3>{{ class.title }}</h3>
           <p>{{ class.description }}</p>
-          <p><a href="/classes" class="btn-learn">Learn More <i class="icon-arrow-right3"></i></a></p>
+          <p><a href="/classes" class="btn-learn">More Classes <i class="icon-arrow-right3"></i></a></p>
         </div>
       </div>
     </div>
