--- a/wellness.html
+++ b/wellness.html
@@ -7,7 +7,12 @@ permalink: /wellness/
     <div class="container">
         <div class="row">
             <h2>Corporate Wellness</h2>
-            </div>
+            <p>Paragraph one</p>
+            <p>Paragraph two</p>
+            <ul>
+                <li>item 1</li>
+                <li>item 2</li>
+            </ul>
         </div>
     </div>
 </div>
