description of corporate wellness

--- a/wellness.html
+++ b/wellness.html
@@ -7,8 +7,8 @@ permalink: /wellness/
     <div class="container">
         <div class="row">
             <h2>Corporate Wellness</h2>
-            <p>Paragraph one</p>
-            <p>Paragraph two</p>
+            <p>Personal Training and Group Fitness Classes can come to you and your employees in your place of business. We can help your employees become healthier, whether you have a gym with equipment or just a room that we can use to teach a class.</p>
+            <p></p>
             <ul>
                 <li>item 1</li>
                 <li>item 2</li>
