--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ fulltitle: "Results Now | Welcome!"
           {% for intro in site.data.intros %}
           <div class="one-third intro-img" style="background-image: url(/images/{{ intro.image }})">
             <div class="desc">
-              <h3 style="padding-top: -5px;">{{ intro.focus }}</h3>
-              <p style="padding-top: 20px;">{{ intro.description }}</p>
+              <h3 style="margin-top: -25px;">{{ intro.focus }}</h3>
+              <p style="padding-top: 100px;">{{ intro.description }}</p>
             </div>
           </div>
           {% endfor %}
