--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,7 @@ permalink: /classes/
         <div class="col-md-4 animate-box">
             <div class="classes">
                 <div class="classes-img" style="background-image: url(/images/{{ class.image }});"></div>
-                <div class="desc"> Coming Soon - Class Progression Series
+                <div class="desc"> 
                     <h3>{{ class.title }}</h3>
                     <p>{{ class.description }}</p>
                 </div>
