--- a/about.html
+++ b/about.html
@@ -27,16 +27,14 @@ permalink: /about/
                     <p class="h1"><a href="tel://{{ site.phone}}">+{{ site.phone }}</a></p>
                     <p class="h2">First Personal Training Session Free</p>
                     <p class="h2">First Group Fitness Class Free</p>
-                    <p><strong>Vision Statement</strong> To provide members/clients with a proper workout which will
+                    <p><strong>Vision Statement</strong> To provide members/clients with an individualized proper workout which will
                         help their bodies
                         to change so they can reach their fitness goals, as well as educate them so they can achieve
                         their long-term goals without injury. </p>
                     <p><strong>Mission Statement</strong> To help members/clients achieve their fitness goals long term
                         by
-                        transitioning from personal training to group fitness and referring clients. Group classes are
-                        set up to achieve everything the body needs to change and reach one’s goals. If members cannot
-                        come at one particular time slot throughout the week, they can use the color coordinated
-                        schedule to help them achieve their goals. </p>
+                        educating them on all aspects of health and wellness and preogressing them throughout their personal training or small group fitness classes. 
+                       </p>
                     <p class="h3">No Yearly Fees or Cancellation Fees</p>
                 </div>
             </div>
