--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@ permalink: /about/
                         style="background-image: url(/images/brand2.png); background-size: contain; background-repeat: no-repeat; height: 300px; background-position-x: center;">
                         &nbsp;</div>
                     <p class="h1"><a href="tel://{{ site.phone}}">+{{ site.phone }}</a></p>
-                    <p class="h2">First Personal Training Session Free</p>
-                    <p class="h2">First Group Fitness Class Free</p>
+                    <p class="h2">Introductory Personal Training Session FREE</p>
+                    <p class="h2">Try our Small Group Progression Series</p>
                     <p><strong>Vision Statement</strong> To provide members/clients with an individualized proper workout which will
                         help their bodies
                         to change so they can reach their fitness goals, as well as educate them so they can achieve
                         their long-term goals without injury. </p>
                     <p><strong>Mission Statement</strong> To help members/clients achieve their fitness goals long term
                         by
-                        educating them on all aspects of health and wellness and preogressing them throughout their personal training or small group fitness classes. 
+                        educating them on all aspects of health and wellness and progressing them throughout their personal training or small group fitness classes. 
                        </p>
                     <p class="h3">No Yearly Fees or Cancellation Fees</p>
                 </div>
