--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ fulltitle: "Results Now | Welcome!"
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-        <h2>Our Classes</h2>
+        <h2>Our Progression Courses</h2>
       </div>
     </div>
     {% for class in site.data.classes limit:3 %}
